--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "email": "hello@jamship.io",
     "url": "https://github.com/Jamship-io"
   },
-
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -18,12 +17,12 @@
     "astro": "astro"
   },
   "devDependencies": {
-   
     "@astrojs/tailwind": "^4.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/alpinejs": "^3.7.2",
-    "astro": "^2.10.6"
+    "astro": "^2.10.6",
+    "daisyui": "^4.4.24"
   },
   "dependencies": {
     "@astrojs/sitemap": "^2.0.1",
