--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "author": {
-    "name": "Jamship",
+    "name": "fenrnando",
     "email": "hello@jamship.io",
     "url": "https://github.com/Jamship-io"
   },
@@ -27,6 +27,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^2.0.1",
     "@astrolib/seo": "^0.6.0",
+    "html2pdf.js": "^0.10.1",
     "install": "^0.13.0",
     "ncu": "^0.2.1",
     "npm": "^9.8.1",
